frontend/assets/style/bootstrap.styl
*
*::before
*::after
  box-sizing: border-box
  margin: 0

html
  font-family:
    'Source Sans Pro',
    -apple-system,
    BlinkMacSystemFont,
    'Segoe UI',
    Roboto,
    'Helvetica Neue',
    Arial,
    sans-serif
  min-height: 100%
  font-size: 16px
  word-spacing: 1px
  -ms-text-size-adjust: 100%
  -webkit-text-size-adjust: 100%
  -moz-osx-font-smoothing: grayscale
  -webkit-font-smoothing: antialiased
  box-sizing: border-box
  overflow-x: hidden

body
  min-height: 1vh
  background: #191e18
  color: #788378
  font-weight: 300
  overflow-x: hidden

